Correct case on composer name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bolt/GoogleAnalytics",
+    "name": "bolt/googleanalytics",
     "description": "",
     "type": "bolt-extension",
     "keywords": [],
