--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
             "init.php"
         ],
         "psr-4": {
-            "GoogleAnalytics\\": ""
+            "Bolt\\Extension\\Bolt\\GoogleAnalytics\\": ""
         }
     },
     "extra": {
