--- a/config.yml.dist
+++ b/config.yml.dist
@@ -3,6 +3,7 @@
 webproperty: UA-12345678-1
 
 universal: false
+univarsal_displayfeatures: false
 universal_domainname: mycoolwebsite.com
 
 widget: false
