Make text slightly more decent

--- a/config.yml.dist
+++ b/config.yml.dist
@@ -1,4 +1,4 @@
-# Note: Replace this with your Google Analtics webproperty-id. It looks
+# Note: Replace this with your Google Analytics webproperty-id. It looks
 # something like UA-12345678-1. Be sure to include the "UA-"-part.
 webproperty: UA-12345678-1
 
