Updated composer.json with compatible apiclient.

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": [],
     "require": {
         "bolt/bolt": "^3.0.0",
-        "google/apiclient": "2.*"
+        "google/apiclient": "^2.0.0@RC"
     },
     "license": "MIT",
     "authors": [
