Updated assets directory.

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         }
     },
     "extra": {
-        "bolt-assets": "assets",
+        "bolt-assets": "web",
         "bolt-class": "Bolt\\Extension\\Bolt\\GoogleAnalytics\\GoogleAnalyticsExtension"
     }
 }
