Default to universal and to empty property
Because of
https://developers.google.com/analytics/devguides/collection/upgrade/
and we only want to add the snippet if we have a tracking code.

--- a/config/config.yml.dist
+++ b/config/config.yml.dist
@@ -1,8 +1,8 @@
 # Note: Replace this with your Google Analytics webproperty-id. It looks
 # something like UA-12345678-1. Be sure to include the "UA-"-part.
-webproperty: UA-12345678-1
+webproperty: 
 
-universal: false
+universal: true
 universal_domainname: mycoolwebsite.com
 
 # Turn on or off the backend statistics view
